src/objects/Case_Work_Request__c.object
<CustomObject>
    <description>AstrumCARE Work Requests related to Cases</description>
    <fields>
        <fullName>Case__c</fullName>
        <description>Parent Case</description>
        <inlineHelpText>Parent Case</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Work Requests</relationshipLabel>
        <relationshipName>Case_Work_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Complete__c</fullName>
        <description>Date Work Request Was Completed</description>
        <inlineHelpText>Date Work Request Was Completed</inlineHelpText>
        <label>Date Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date This Work Was Requested</description>
        <inlineHelpText>Date This Work Was Requested</inlineHelpText>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department of To Whom User</description>
        <formula>To_Whom__r.Department</formula>
        <inlineHelpText>Department of To Whom User</inlineHelpText>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Work Request Body</description>
        <inlineHelpText>Work Request Body</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject</description>
        <inlineHelpText>Subject</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Whom_Email__c</fullName>
        <description>Email Address of &quot;To Whom&quot;</description>
        <formula>To_Whom__r.Email</formula>
        <inlineHelpText>Email Address of &quot;To Whom&quot;</inlineHelpText>
        <label>To Whom Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Whom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User This Request Was Sent To</description>
        <inlineHelpText>User This Request Was Sent To</inlineHelpText>
        <label>To Whom</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Work Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CWR-{0000000000}</displayFormat>
        <label>Case Work Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Work Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>